# orin_car

./: CMakeLists.txt  README.md  package.xml
config/: =0.1.71  X4-Pro.yaml  nav2_params.yaml  nav2_params2.yaml  slam_params.yaml
final_scripts/: docking_ai.py  docking_ai_final.py  docking_controller_final.py  driving_controller_final.py  marshaller_controller_final.py  mqtt_final.py  vision_final.py  vision_mqtt_combined.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/orin_car/lib/orin_car/: ackermann_driver.py  ackermann_driver_test.py  docking_ai.py  docking_ai_test.py  docking_ai_test_v2.py  docking_controller.py  docking_controller_test.py  docking_controller_test_v2.py  driving_controller_test.py  generate_nav2_json.py  gesture_ai_test.py  marshaller_controller_test.py  motor_test.py  mqtt_nav_bridge_ssafy.py  mqtt_path_follower.py  mqtt_total_control_test.py  test_gripper.py  video_stack
install/orin_car/share/orin_car/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  (+5 more)
launch/: bringup_launch.py  camera_test.launch.py  combined_launch.py  docking_test_launch.py  docking_test_v2_launch.py  final_launch.py  final_launch_v2.py  final_launch_v3.py  front_cam.launch.py  marshaller_test_launch.py  master_test_launch.py  nav.launch.py  nav_launch.py  nav_launch_mqtt.py  path_launch.py  planner_only_test.launch.py  rear_cam.launch.py  simul_nav_launch.py  simul_nav_total_launch.py  slam_launch.py  slam_test_launch.py  test_docking.launch.py  total_mission.launch.py  total_system.launch.py  total_test.launch.py  trailer_nav_launch.py
log/: latest_build
mqtt/: mission_client.py  mqtt_bridge.py  state_manager.py
orin_car/videos/: camera_manager.py  webrtc_sharedcam.py
sample_code/: motor_test.py  motor_test_stm.py  reset_robot.py  servo_motor.py  servo_motor_stm.py  test_gripper.py  test_gripper_stm.py
scripts/: ackermann_driver.py  ackermann_driver_stm.py  docking_ai.py  docking_controller.py  docking_controller_v2.py  generate_nav2_json.py  gesture_ai.py  main.py  marshaller_controller.py  marshaller_controller_v2.py  master_controller_dynamic.py  master_controller_ssafy.py  mission_master.py  mqtt_dock_nav.py  mqtt_nav_bridge.py  mqtt_nav_bridge_ssafy.py  mqtt_nav_bridge_ssafy_total.py  mqtt_path_follower.py  mqtt_total_bridge.py  scan_locker.py  test_docking_drive.py  vision_manager.py  vision_manager_raw.py
test_scripts/: ackermann_driver_test.py  docking_ai_test.py  docking_ai_test_v2.py  docking_controller.py  docking_controller_test.py  docking_controller_test_v2.py  driving_controller.py  driving_controller_test.py  generate_nav2_json.py  gesture_ai_test.py  marshaller_controller.py  marshaller_controller_test.py  mqtt_total_control_test.py  path_generator.py  simple_motion.py  test_drive.py  video_stack.py
urdf/: ackermann_car.urdf.xacro  picar.urdf
(+36 files in other folders)
